accelerator-assets/multi-cluster/sample-demos/local-services/petclinic-gateway-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: petclinic-gateway
  namespace: default
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: petclinic-gateway
      port: 80
  virtualhost:
    fqdn: petclinic.INGRESS_DOMAIN
    tls:
      secretName: petclinic-gateway-tls-cert
